backend/ingress/ingress.yaml
# ingress resource for protected services

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protected-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /mock_service
        pathType: Prefix
        backend:
          service:
            name: mock-service
            port:
              number: 3001
  - http:
      paths:
      - path: /authentication_service
        pathType: Prefix
        backend:
          service:
            name: authentication-service
            port:
              number: 3000
